fixed padding issues; decreases amount of white space under bg img

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,12 +165,12 @@ nav.shrink .navbar-brand img{
     background: url(../img/zac&abby.jpg);
     background-size: 100% auto;
     background-position: 0 90px;
-    background-attachment: fixed;
+    background-attachment: local;
     background-repeat: no-repeat;
     color: #FFF450;
 }
 #tf-home .overlay {
-    padding: 10% 0;
+    padding: 15% 0;
     background-attachment: fixed;
 }
 #tf-home h1 {
